<resources>
    <string name="app_name" translatable="false">心血管健康</string>
    <string name="camera_permission_required">本功能需要相机权限！</string>
    <string name="action_settings" translatable="false">Settings</string>
        <string name="text_ack_msg">已读</string>
        <string name="text_delivered_msg">送达</string>
        <string name="back">返回</string>
        <string name="save">保存</string>
        <string name="button_pushtotalk">按住说话</string>
        <string name="button_send">发送</string>
        <string name="attach_smile">表情</string>
        <string name="attach_picture">图片</string>
        <string name="attach_take_pic">拍照</string>
        <string name="attach_location">位置</string>
        <string name="attach_file">文件</string>
        <string name="attach_voice_call">语音电话</string>
        <string name="user_card">名片</string>
        <string name="move_up_to_cancel">手指上滑，取消发送</string>
        <string name="release_to_cancel">松开手指，取消发送</string>
        <string name="send_fail">发送消息失败,</string>
        <string name="delete_message">删除消息</string>
        <string name="copy_message">复制消息</string>
        <string name="delete_voice">删除语音</string>
        <string name="delete_video">删除视频</string>
        <string name="delete">删除</string>
        <string name="resend">重发</string>
        <string name="confirm_resend">确认重发该信息？</string>
        <string name="connect_failuer_toast">请检查网络或稍候重试</string>
        <string name="network_unavailable">网络连接不可用，请检查网络</string>
        <string name="copy">复制</string>
        <string name="forward">转发</string>
        <string name="button_logout">退出登录</string>
        <string name="button_uploadlog">上传运行日志</string>
        <string name="clear_all_records">是否清空所有聊天记录？</string>
        <string name="location_recv">[%1$s的位置]</string>
        <string name="location_message">位置信息</string>
        <string name="recording_video">录制视频</string>
        <string name="location_prefix">[我的位置]</string>
        <string name="picture">[图片]</string>
        <string name="video">[视频]</string>
        <string name="file">[文件]</string>
        <string name="voice_call">[语音通话]</string>
        <string name="button_cancel">取消</string>
        <string name="button_save">保存</string>
        <string name="button_search">查找</string>
        <string name="button_add">添加</string>
        <string name="search_header">搜</string>
        <string name="network_isnot_available">网络不可用</string>
        <string name="recoding_fail">录音失败，请重试！</string>
        <string name="select_contacts">选择联系人</string>
        <string name="confirm_forward_to">确定转发到：%1$s ?</string>
        <string name="logout">退出登录</string>
        <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
        <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
        <string name="dissolution_group_hint">退出后，此群将被解散</string>
        <string name="exit_group">退出</string>
        <string name="connect_conflict">同一帐号已在其他设备登录</string>
        <string name="set">设置</string>
        <string name="notify">新消息提醒</string>
        <string name="newnotify">接收新消息通知</string>
        <string name="voice">声音</string>
        <string name="shake">震动</string>
        <string name="chatset">聊天设置</string>
        <string name="yangshengqi">使用扬声器播放语音</string>
        <string name="book_black">通讯录黑名单</string>
        <string name="session">会话</string>
        <string name="address_book">通讯录</string>
        <string name="setting">设置</string>
        <string name="now_refresh_list">正在加载数据</string>
        <string name="Application_and_notify">申请与通知</string>
        <string name="group_chat">群聊</string>
        <string name="add_friend">添加好友</string>
        <string name="search">搜索</string>
        <string name="black_item">黑名单</string>
        <string name="diagnose">诊断</string>
        <string name="Current_version">当前版本</string>
        <string name="Not_Set">未设置</string>
        <string name="Upload_the_log">上传日志中</string>
        <string name="The_new_group_chat">新建群组</string>
        <string name="group_name">群聊名称</string>
        <string name="Group_chat_profile">群聊简介</string>
        <string name="Whether_the_public">是否公开</string>
        <string name="Open_group_members_invited">开放群成员邀请</string>
        <string name="Open_group_chat">公开的群聊</string>
        <string name="blacklist">黑名单列表</string>
        <string name="Empty_the_chat_record">清空聊天记录</string>
        <string name="Shielding_of_the_message">屏蔽群消息</string>
        <string name="dismiss_group">解散群聊</string>
        <string name="Select_the_contact">选择联系人</string>
        <string name="Group_chat_information">群聊资料</string>
        <string name="Group_of_Lord">群主</string>
        <string name="Introduction">简介</string>
        <string name="To_join_the_chat">加入群聊</string>
        <string name="login">登录</string>
        <string name="user_name">用户名</string>
        <string name="password">密码</string>
        <string name="register">注册</string>
        <string name="confirmpassword">确认密码</string>
        <string name="downwaiting">正在下载文件请稍后</string>
        <string name="mute">静音</string>
        <string name="Hands_free">免提</string>
        <string name="hang_up">挂断</string>
        <string name="answer">接听</string>
        <string name="unable_to_connect">不能连接到服务器</string>
        <string name="newchat">新建聊天</string>
        <string name="agree">同意</string>
        <string name="Group_chat">群聊:</string>
        <string name="not_download">未下载:</string>
        <string name="Please_enter_a_username">请输入用户名</string>
        <string name="is_down_please_wait">正在下载视频请稍候</string>
        <string name="Exit_the_group_chat">退出群聊</string>
        <string name="feedback_tit">反馈意见</string>
    <string name="question_desp">问题描述</string>
    <string name="link_style">联系方式</string>
    <string name="msg_camera_framework_bug">The camera is occupied or has no camera permission, please check</string>
    <string name="button_ok">Exit</string>
    <string name="scan_code">扫一扫</string>
    <string name="open_flash">Turn on the flash</string>
    <string name="close_flash">Turn off the flash</string>
    <string name="gallery">Gallery</string>
    <string name="scan_failed_tip">Scan image failed, please retry.</string>
    <string name="vod_ffplay">ffplay</string>
    <string name="vod_exo">exo</string>
    <string name="service_start_time">服务开始时间</string>
    <string name="hold_on">接听电话</string>
    <string name="service_expire_time">服务到期时间</string>
    <string name="service_deadline_time">服务截止时间</string>
    <string name="preserve_service_time">预约服务时间</string>
    <string name="preserve_service_time_zone">预约服务时间段</string>
</resources>