<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- 整体透明画布 -->


    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolBarHeight"
            android:layout_gravity="top"
            android:background="#000000">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/backIv"
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                app:srcCompat="@mipmap/arrow_left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/scan_code"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/icon_add_small" />


            <TextView
                android:id="@+id/tv_album"
                android:layout_toLeftOf="@+id/iv_add"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="相册"
                android:textColor="#ffffff"
                android:textSize="14sp" />


        </RelativeLayout>


        <!-- 扫描取景框 -->
        <zxing.view.ViewfinderView
            android:id="@+id/viewfinder_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_gravity="bottom"
            android:background="#99000000"
            android:visibility="gone"
            android:orientation="horizontal">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/flashLightLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/flashLightIv"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/ic_close" />

                <TextView
                    android:id="@+id/flashLightTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/open_flash"
                    android:textColor="#ffffff" />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/albumLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/albumIv"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:tint="#ffffffff"
                    app:srcCompat="@drawable/ic_photo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/gallery"

                    android:textColor="#ffffff" />
            </android.support.v7.widget.LinearLayoutCompat>


        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_my_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_scan_my_code"
        android:text="我的识别码"
        android:textColor="@color/writeColor"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="5dp"
        android:textSize="14sp"
        android:drawableLeft="@mipmap/sbm2"
        android:drawablePadding="5dp"
        android:paddingBottom="5dp"/>
</RelativeLayout>