<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/pBackColor"
              tools:context=".activity.myself.FeedbackActvity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/groabColor"
    >
        <LinearLayout
                android:layout_width="61dp"
                android:layout_height="match_parent"
                android:id="@+id/back"
                android:orientation="horizontal">
            <ImageView
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:src="@mipmap/arrow_left"/>
        </LinearLayout>
        <TextView
                android:text="@string/feedback_tit"
                android:textSize="10pt"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:textColor="@color/writeColor"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/writeColor"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_desp"
                    android:textSize="8pt"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/tabColor_nomal"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
            />

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/writeColor">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="80dp"
                    android:hint="您好，请简要描述您的问题或建议\n\n\n\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u300050-200字"
                    android:id="@+id/tv_suggestion"
                    android:background="@drawable/bg_lrbs_zsedit"
                    android:textSize="7pt"
                    android:layout_marginTop="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/tabColor_nomal"
            />
        </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/writeColor"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="选择故障日期"
                android:textSize="8pt"
                android:layout_marginLeft="10dp"
                android:textColor="@color/tabColor_nomal"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
        />

    </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/writeColor"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_question_time"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:minHeight="35dp"
                    android:background="@drawable/shape_box_gray2"
                    android:layout_gravity="center"
                    android:drawableRight="@mipmap/arrow_dd"
            />

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/writeColor"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/link_style"
                    android:textSize="8pt"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/tabColor_nomal"
                    android:layout_gravity="center_vertical"
            />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textSize="8pt"  android:textColor="@color/textColor_vo" android:text="(选填)" android:layout_gravity="center_vertical"></TextView>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/writeColor"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/ed_feed_telephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="35dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="请留下你的邮箱、手机、QQ号"
                    android:background="@drawable/shape_box_gray2"
            />
        </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_jwbs_txbs"
            android:gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="80dp"
            android:text="提交"
            android:id="@+id/sub_feed"
            android:textColor="#ffffffff"
            android:textSize="15sp"
    />
</LinearLayout>